// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Select with many options 1`] = `
<div>
  <div
    class="wrapper select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440003"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440003"
      >
        <option>
          Foo
        </option>
        <option>
          Bar
        </option>
        <option>
          Baz
        </option>
        <option>
          Quux
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M328.677 353.767c-8.333-8.309-19.249-12.453-30.16-12.433-10.876 0.019-21.745 4.175-30.042 12.466s-12.456 19.153-12.475 30.021c-0.019 10.918 4.139 21.842 12.475 30.172l213.334 213.51c8.337 8.333 19.264 12.497 30.191 12.497s21.854-4.164 30.191-12.497l213.333-213.33c8.337-8.33 12.497-19.254 12.476-30.172-0.021-10.868-4.177-21.729-12.476-30.021-8.294-8.291-19.166-12.447-30.042-12.466-10.91-0.019-21.828 4.125-30.161 12.433l-183.322 182.979-183.323-183.159z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders a Select with no options 1`] = `
<div>
  <div
    class="wrapper select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440001"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440001"
      />
      <span
        class="postfix"
      >
        <svg
          class="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M328.677 353.767c-8.333-8.309-19.249-12.453-30.16-12.433-10.876 0.019-21.745 4.175-30.042 12.466s-12.456 19.153-12.475 30.021c-0.019 10.918 4.139 21.842 12.475 30.172l213.334 213.51c8.337 8.333 19.264 12.497 30.191 12.497s21.854-4.164 30.191-12.497l213.333-213.33c8.337-8.33 12.497-19.254 12.476-30.172-0.021-10.868-4.177-21.729-12.476-30.021-8.294-8.291-19.166-12.447-30.042-12.466-10.91-0.019-21.828 4.125-30.161 12.433l-183.322 182.979-183.323-183.159z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders a Select with one option 1`] = `
<div>
  <div
    class="wrapper select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440002"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440002"
      >
        <option>
          Foo
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M328.677 353.767c-8.333-8.309-19.249-12.453-30.16-12.433-10.876 0.019-21.745 4.175-30.042 12.466s-12.456 19.153-12.475 30.021c-0.019 10.918 4.139 21.842 12.475 30.172l213.334 213.51c8.337 8.333 19.264 12.497 30.191 12.497s21.854-4.164 30.191-12.497l213.333-213.33c8.337-8.33 12.497-19.254 12.476-30.172-0.021-10.868-4.177-21.729-12.476-30.021-8.294-8.291-19.166-12.447-30.042-12.466-10.91-0.019-21.828 4.125-30.161 12.433l-183.322 182.979-183.323-183.159z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly as large 1`] = `
<div>
  <div
    class="wrapper large select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440005"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440005"
      >
        <option>
          Foo
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M328.677 353.767c-8.333-8.309-19.249-12.453-30.16-12.433-10.876 0.019-21.745 4.175-30.042 12.466s-12.456 19.153-12.475 30.021c-0.019 10.918 4.139 21.842 12.475 30.172l213.334 213.51c8.337 8.333 19.264 12.497 30.191 12.497s21.854-4.164 30.191-12.497l213.333-213.33c8.337-8.33 12.497-19.254 12.476-30.172-0.021-10.868-4.177-21.729-12.476-30.021-8.294-8.291-19.166-12.447-30.042-12.466-10.91-0.019-21.828 4.125-30.161 12.433l-183.322 182.979-183.323-183.159z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly as small 1`] = `
<div>
  <div
    class="wrapper small select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440004"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440004"
      >
        <option>
          Foo
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M328.677 353.767c-8.333-8.309-19.249-12.453-30.16-12.433-10.876 0.019-21.745 4.175-30.042 12.466s-12.456 19.153-12.475 30.021c-0.019 10.918 4.139 21.842 12.475 30.172l213.334 213.51c8.337 8.333 19.264 12.497 30.191 12.497s21.854-4.164 30.191-12.497l213.333-213.33c8.337-8.33 12.497-19.254 12.476-30.172-0.021-10.868-4.177-21.729-12.476-30.021-8.294-8.291-19.166-12.447-30.042-12.466-10.91-0.019-21.828 4.125-30.161 12.433l-183.322 182.979-183.323-183.159z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when disabled 1`] = `
<div>
  <div
    class="wrapper disabled select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440006"
      />
      <select
        class="input"
        disabled=""
        id="123e4567-e89b-12d3-a456-426655440006"
      >
        <option>
          Foo
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M328.677 353.767c-8.333-8.309-19.249-12.453-30.16-12.433-10.876 0.019-21.745 4.175-30.042 12.466s-12.456 19.153-12.475 30.021c-0.019 10.918 4.139 21.842 12.475 30.172l213.334 213.51c8.337 8.333 19.264 12.497 30.191 12.497s21.854-4.164 30.191-12.497l213.333-213.33c8.337-8.33 12.497-19.254 12.476-30.172-0.021-10.868-4.177-21.729-12.476-30.021-8.294-8.291-19.166-12.447-30.042-12.466-10.91-0.019-21.828 4.125-30.161 12.433l-183.322 182.979-183.323-183.159z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when invalid 1`] = `
<div>
  <div
    class="wrapper invalid select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440007"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440007"
      >
        <option>
          Foo
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M328.677 353.767c-8.333-8.309-19.249-12.453-30.16-12.433-10.876 0.019-21.745 4.175-30.042 12.466s-12.456 19.153-12.475 30.021c-0.019 10.918 4.139 21.842 12.475 30.172l213.334 213.51c8.337 8.333 19.264 12.497 30.191 12.497s21.854-4.164 30.191-12.497l213.333-213.33c8.337-8.33 12.497-19.254 12.476-30.172-0.021-10.868-4.177-21.729-12.476-30.021-8.294-8.291-19.166-12.447-30.042-12.466-10.91-0.019-21.828 4.125-30.161 12.433l-183.322 182.979-183.323-183.159z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
